--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -124,7 +124,7 @@
 
   .profile__add-button {
     margin: 40px 0 0 0;
-    width: 90%;
+    width: 100%;
   }
 
   .profile__picture {
